Compiler_Front/project/y.output
语法

    0 $accept: S $end

    1 S: Program

    2 Program: %empty
    3        | Program FuncDecl

    4 FuncDecl: RetType FuncName T_LP Args T_RP T_LC BlockContent T_RC
    5         | RetType FuncName error Args T_RP T_LC BlockContent T_RC
    6         | RetType FuncName T_LP Args error T_LC BlockContent T_RC
    7         | RetType FuncName T_LP Args T_RP error BlockContent T_RC
    8         | RetType FuncName T_LP Args T_RP T_LC BlockContent error

    9 RetType: T_Int
   10        | T_Void

   11 FuncName: T_Identifier

   12 Args: %empty
   13     | _Args

   14 _Args: T_Int T_Identifier
   15      | _Args T_COMMA T_Int T_Identifier

   16 BlockContent: %empty
   17             | VarDecls BlockContent
   18             | Stmts BlockContent

   19 VarDecls: VarDecl T_SEMI
   20         | VarDecl error

   21 VarDecl: T_Int T_Identifier
   22        | VarDecl T_COMMA T_Identifier

   23 Stmts: Stmt

   24 Stmt: AssignStmt
   25     | PrintStmt
   26     | CallStmt
   27     | ReturnStmt
   28     | IfStmt
   29     | WhileStmt
   30     | BreakStmt
   31     | ContinueStmt

   32 AssignStmt: T_Identifier T_ASSIGNOP Expr T_SEMI

   33 PrintStmt: T_Print T_LP T_StringConstant PActuals T_RP T_SEMI

   34 PActuals: %empty
   35         | PActuals T_COMMA Expr

   36 CallStmt: CallExpr T_SEMI

   37 CallExpr: T_Identifier T_LP Actuals T_RP

   38 Actuals: %empty
   39        | Expr PActuals

   40 ReturnStmt: T_Return Expr T_SEMI
   41           | T_Return T_SEMI

   42 IfStmt: If TestExpr StmtsBlock
   43       | If TestExpr StmtsBlock Else StmtsBlock

   44 If: T_If

   45 TestExpr: T_LP Expr T_RP

   46 StmtsBlock: T_LC BlockContent T_RC

   47 Else: T_Else

   48 WhileStmt: While TestExpr StmtsBlock

   49 While: T_While

   50 BreakStmt: T_Break T_SEMI

   51 ContinueStmt: T_Continue T_SEMI

   52 Expr: Expr T_PLUS Expr
   53     | Expr T_MINUS Expr
   54     | Expr T_STAR Expr
   55     | Expr T_DIV Expr
   56     | Expr T_PER Expr
   57     | Expr T_RB Expr
   58     | Expr T_LB Expr
   59     | Expr T_Ge Expr
   60     | Expr T_Le Expr
   61     | Expr T_Eq Expr
   62     | Expr T_Ne Expr
   63     | Expr T_Or Expr
   64     | Expr T_And Expr
   65     | T_NOT Expr
   66     | T_IntConstant
   67     | T_Identifier
   68     | ReadInt
   69     | CallExpr
   70     | T_LP Expr T_RP

   71 ReadInt: T_ReadInt T_LP T_StringConstant T_RP


Terminals, with rules where they appear

$end (0) 0
error (256) 5 6 7 8 20
T_Int (258) 9 14 15 21
T_Void (259) 10
T_Return (260) 40 41
T_Print (261) 33
T_ReadInt (262) 71
T_While (263) 49
T_If (264) 44
T_Else (265) 47
T_Break (266) 50
T_Continue (267) 51
T_Le (268) 60
T_Ge (269) 59
T_Eq (270) 61
T_Ne (271) 62
T_And (272) 64
T_Or (273) 63
T_IntConstant (274) 66
T_StringConstant (275) 33 71
T_Identifier (276) 11 14 15 21 22 32 37 67
T_MINUS (277) 53
T_DIV (278) 55
T_PLUS (279) 52
T_STAR (280) 54
T_PER (281) 56
T_ASSIGNOP (282) 32
T_COMMA (283) 15 22 35
T_SEMI (284) 19 32 33 36 40 41 50 51
T_NOT (285) 65
T_LC (286) 4 5 6 8 46
T_RC (287) 4 5 6 7 46
T_LB (288) 58
T_RB (289) 57
T_LP (290) 4 6 7 8 33 37 45 70 71
T_RP (291) 4 5 7 8 33 37 45 70 71


Nonterminals, with rules where they appear

$accept (37)
    on left: 0
S (38)
    on left: 1, on right: 0
Program (39)
    on left: 2 3, on right: 1 3
FuncDecl (40)
    on left: 4 5 6 7 8, on right: 3
RetType (41)
    on left: 9 10, on right: 4 5 6 7 8
FuncName (42)
    on left: 11, on right: 4 5 6 7 8
Args (43)
    on left: 12 13, on right: 4 5 6 7 8
_Args (44)
    on left: 14 15, on right: 13 15
BlockContent (45)
    on left: 16 17 18, on right: 4 5 6 7 8 17 18 46
VarDecls (46)
    on left: 19 20, on right: 17
VarDecl (47)
    on left: 21 22, on right: 19 20 22
Stmts (48)
    on left: 23, on right: 18
Stmt (49)
    on left: 24 25 26 27 28 29 30 31, on right: 23
AssignStmt (50)
    on left: 32, on right: 24
PrintStmt (51)
    on left: 33, on right: 25
PActuals (52)
    on left: 34 35, on right: 33 35 39
CallStmt (53)
    on left: 36, on right: 26
CallExpr (54)
    on left: 37, on right: 36 69
Actuals (55)
    on left: 38 39, on right: 37
ReturnStmt (56)
    on left: 40 41, on right: 27
IfStmt (57)
    on left: 42 43, on right: 28
If (58)
    on left: 44, on right: 42 43
TestExpr (59)
    on left: 45, on right: 42 43 48
StmtsBlock (60)
    on left: 46, on right: 42 43 48
Else (61)
    on left: 47, on right: 43
WhileStmt (62)
    on left: 48, on right: 29
While (63)
    on left: 49, on right: 48
BreakStmt (64)
    on left: 50, on right: 30
ContinueStmt (65)
    on left: 51, on right: 31
Expr (66)
    on left: 52 53 54 55 56 57 58 59 60 61 62 63 64 65 66 67 68 69
    70, on right: 32 35 39 40 45 52 53 54 55 56 57 58 59 60 61 62 63
    64 65 70
ReadInt (67)
    on left: 71, on right: 68


State 0

    0 $accept: . S $end

    $default  reduce using rule 2 (Program)

    S        转到状态 1
    Program  转到状态 2


State 1

    0 $accept: S . $end

    $end  shift, and go to state 3


State 2

    1 S: Program .
    3 Program: Program . FuncDecl

    T_Int   shift, and go to state 4
    T_Void  shift, and go to state 5

    $default  reduce using rule 1 (S)

    FuncDecl  转到状态 6
    RetType   转到状态 7


State 3

    0 $accept: S $end .

    $default  接受


State 4

    9 RetType: T_Int .

    $default  reduce using rule 9 (RetType)


State 5

   10 RetType: T_Void .

    $default  reduce using rule 10 (RetType)


State 6

    3 Program: Program FuncDecl .

    $default  reduce using rule 3 (Program)


State 7

    4 FuncDecl: RetType . FuncName T_LP Args T_RP T_LC BlockContent T_RC
    5         | RetType . FuncName error Args T_RP T_LC BlockContent T_RC
    6         | RetType . FuncName T_LP Args error T_LC BlockContent T_RC
    7         | RetType . FuncName T_LP Args T_RP error BlockContent T_RC
    8         | RetType . FuncName T_LP Args T_RP T_LC BlockContent error

    T_Identifier  shift, and go to state 8

    FuncName  转到状态 9


State 8

   11 FuncName: T_Identifier .

    $default  reduce using rule 11 (FuncName)


State 9

    4 FuncDecl: RetType FuncName . T_LP Args T_RP T_LC BlockContent T_RC
    5         | RetType FuncName . error Args T_RP T_LC BlockContent T_RC
    6         | RetType FuncName . T_LP Args error T_LC BlockContent T_RC
    7         | RetType FuncName . T_LP Args T_RP error BlockContent T_RC
    8         | RetType FuncName . T_LP Args T_RP T_LC BlockContent error

    error  shift, and go to state 10
    T_LP   shift, and go to state 11


State 10

    5 FuncDecl: RetType FuncName error . Args T_RP T_LC BlockContent T_RC

    T_Int  shift, and go to state 12

    $default  reduce using rule 12 (Args)

    Args   转到状态 13
    _Args  转到状态 14


State 11

    4 FuncDecl: RetType FuncName T_LP . Args T_RP T_LC BlockContent T_RC
    6         | RetType FuncName T_LP . Args error T_LC BlockContent T_RC
    7         | RetType FuncName T_LP . Args T_RP error BlockContent T_RC
    8         | RetType FuncName T_LP . Args T_RP T_LC BlockContent error

    T_Int  shift, and go to state 12

    $default  reduce using rule 12 (Args)

    Args   转到状态 15
    _Args  转到状态 14


State 12

   14 _Args: T_Int . T_Identifier

    T_Identifier  shift, and go to state 16


State 13

    5 FuncDecl: RetType FuncName error Args . T_RP T_LC BlockContent T_RC

    T_RP  shift, and go to state 17


State 14

   13 Args: _Args .
   15 _Args: _Args . T_COMMA T_Int T_Identifier

    T_COMMA  shift, and go to state 18

    $default  reduce using rule 13 (Args)


State 15

    4 FuncDecl: RetType FuncName T_LP Args . T_RP T_LC BlockContent T_RC
    6         | RetType FuncName T_LP Args . error T_LC BlockContent T_RC
    7         | RetType FuncName T_LP Args . T_RP error BlockContent T_RC
    8         | RetType FuncName T_LP Args . T_RP T_LC BlockContent error

    error  shift, and go to state 19
    T_RP   shift, and go to state 20


State 16

   14 _Args: T_Int T_Identifier .

    $default  reduce using rule 14 (_Args)


State 17

    5 FuncDecl: RetType FuncName error Args T_RP . T_LC BlockContent T_RC

    T_LC  shift, and go to state 21


State 18

   15 _Args: _Args T_COMMA . T_Int T_Identifier

    T_Int  shift, and go to state 22


State 19

    6 FuncDecl: RetType FuncName T_LP Args error . T_LC BlockContent T_RC

    T_LC  shift, and go to state 23


State 20

    4 FuncDecl: RetType FuncName T_LP Args T_RP . T_LC BlockContent T_RC
    7         | RetType FuncName T_LP Args T_RP . error BlockContent T_RC
    8         | RetType FuncName T_LP Args T_RP . T_LC BlockContent error

    error  shift, and go to state 24
    T_LC   shift, and go to state 25


State 21

    5 FuncDecl: RetType FuncName error Args T_RP T_LC . BlockContent T_RC

    T_Int         shift, and go to state 26
    T_Return      shift, and go to state 27
    T_Print       shift, and go to state 28
    T_While       shift, and go to state 29
    T_If          shift, and go to state 30
    T_Break       shift, and go to state 31
    T_Continue    shift, and go to state 32
    T_Identifier  shift, and go to state 33

    $default  reduce using rule 16 (BlockContent)

    BlockContent  转到状态 34
    VarDecls      转到状态 35
    VarDecl       转到状态 36
    Stmts         转到状态 37
    Stmt          转到状态 38
    AssignStmt    转到状态 39
    PrintStmt     转到状态 40
    CallStmt      转到状态 41
    CallExpr      转到状态 42
    ReturnStmt    转到状态 43
    IfStmt        转到状态 44
    If            转到状态 45
    WhileStmt     转到状态 46
    While         转到状态 47
    BreakStmt     转到状态 48
    ContinueStmt  转到状态 49


State 22

   15 _Args: _Args T_COMMA T_Int . T_Identifier

    T_Identifier  shift, and go to state 50


State 23

    6 FuncDecl: RetType FuncName T_LP Args error T_LC . BlockContent T_RC

    T_Int         shift, and go to state 26
    T_Return      shift, and go to state 27
    T_Print       shift, and go to state 28
    T_While       shift, and go to state 29
    T_If          shift, and go to state 30
    T_Break       shift, and go to state 31
    T_Continue    shift, and go to state 32
    T_Identifier  shift, and go to state 33

    $default  reduce using rule 16 (BlockContent)

    BlockContent  转到状态 51
    VarDecls      转到状态 35
    VarDecl       转到状态 36
    Stmts         转到状态 37
    Stmt          转到状态 38
    AssignStmt    转到状态 39
    PrintStmt     转到状态 40
    CallStmt      转到状态 41
    CallExpr      转到状态 42
    ReturnStmt    转到状态 43
    IfStmt        转到状态 44
    If            转到状态 45
    WhileStmt     转到状态 46
    While         转到状态 47
    BreakStmt     转到状态 48
    ContinueStmt  转到状态 49


State 24

    7 FuncDecl: RetType FuncName T_LP Args T_RP error . BlockContent T_RC

    T_Int         shift, and go to state 26
    T_Return      shift, and go to state 27
    T_Print       shift, and go to state 28
    T_While       shift, and go to state 29
    T_If          shift, and go to state 30
    T_Break       shift, and go to state 31
    T_Continue    shift, and go to state 32
    T_Identifier  shift, and go to state 33

    $default  reduce using rule 16 (BlockContent)

    BlockContent  转到状态 52
    VarDecls      转到状态 35
    VarDecl       转到状态 36
    Stmts         转到状态 37
    Stmt          转到状态 38
    AssignStmt    转到状态 39
    PrintStmt     转到状态 40
    CallStmt      转到状态 41
    CallExpr      转到状态 42
    ReturnStmt    转到状态 43
    IfStmt        转到状态 44
    If            转到状态 45
    WhileStmt     转到状态 46
    While         转到状态 47
    BreakStmt     转到状态 48
    ContinueStmt  转到状态 49


State 25

    4 FuncDecl: RetType FuncName T_LP Args T_RP T_LC . BlockContent T_RC
    8         | RetType FuncName T_LP Args T_RP T_LC . BlockContent error

    T_Int         shift, and go to state 26
    T_Return      shift, and go to state 27
    T_Print       shift, and go to state 28
    T_While       shift, and go to state 29
    T_If          shift, and go to state 30
    T_Break       shift, and go to state 31
    T_Continue    shift, and go to state 32
    T_Identifier  shift, and go to state 33

    $default  reduce using rule 16 (BlockContent)

    BlockContent  转到状态 53
    VarDecls      转到状态 35
    VarDecl       转到状态 36
    Stmts         转到状态 37
    Stmt          转到状态 38
    AssignStmt    转到状态 39
    PrintStmt     转到状态 40
    CallStmt      转到状态 41
    CallExpr      转到状态 42
    ReturnStmt    转到状态 43
    IfStmt        转到状态 44
    If            转到状态 45
    WhileStmt     转到状态 46
    While         转到状态 47
    BreakStmt     转到状态 48
    ContinueStmt  转到状态 49


State 26

   21 VarDecl: T_Int . T_Identifier

    T_Identifier  shift, and go to state 54


State 27

   40 ReturnStmt: T_Return . Expr T_SEMI
   41           | T_Return . T_SEMI

    T_ReadInt      shift, and go to state 55
    T_IntConstant  shift, and go to state 56
    T_Identifier   shift, and go to state 57
    T_SEMI         shift, and go to state 58
    T_NOT          shift, and go to state 59
    T_LP           shift, and go to state 60

    CallExpr  转到状态 61
    Expr      转到状态 62
    ReadInt   转到状态 63


State 28

   33 PrintStmt: T_Print . T_LP T_StringConstant PActuals T_RP T_SEMI

    T_LP  shift, and go to state 64


State 29

   49 While: T_While .

    $default  reduce using rule 49 (While)


State 30

   44 If: T_If .

    $default  reduce using rule 44 (If)


State 31

   50 BreakStmt: T_Break . T_SEMI

    T_SEMI  shift, and go to state 65


State 32

   51 ContinueStmt: T_Continue . T_SEMI

    T_SEMI  shift, and go to state 66


State 33

   32 AssignStmt: T_Identifier . T_ASSIGNOP Expr T_SEMI
   37 CallExpr: T_Identifier . T_LP Actuals T_RP

    T_ASSIGNOP  shift, and go to state 67
    T_LP        shift, and go to state 68


State 34

    5 FuncDecl: RetType FuncName error Args T_RP T_LC BlockContent . T_RC

    T_RC  shift, and go to state 69


State 35

   17 BlockContent: VarDecls . BlockContent

    T_Int         shift, and go to state 26
    T_Return      shift, and go to state 27
    T_Print       shift, and go to state 28
    T_While       shift, and go to state 29
    T_If          shift, and go to state 30
    T_Break       shift, and go to state 31
    T_Continue    shift, and go to state 32
    T_Identifier  shift, and go to state 33

    $default  reduce using rule 16 (BlockContent)

    BlockContent  转到状态 70
    VarDecls      转到状态 35
    VarDecl       转到状态 36
    Stmts         转到状态 37
    Stmt          转到状态 38
    AssignStmt    转到状态 39
    PrintStmt     转到状态 40
    CallStmt      转到状态 41
    CallExpr      转到状态 42
    ReturnStmt    转到状态 43
    IfStmt        转到状态 44
    If            转到状态 45
    WhileStmt     转到状态 46
    While         转到状态 47
    BreakStmt     转到状态 48
    ContinueStmt  转到状态 49


State 36

   19 VarDecls: VarDecl . T_SEMI
   20         | VarDecl . error
   22 VarDecl: VarDecl . T_COMMA T_Identifier

    error    shift, and go to state 71
    T_COMMA  shift, and go to state 72
    T_SEMI   shift, and go to state 73


State 37

   18 BlockContent: Stmts . BlockContent

    T_Int         shift, and go to state 26
    T_Return      shift, and go to state 27
    T_Print       shift, and go to state 28
    T_While       shift, and go to state 29
    T_If          shift, and go to state 30
    T_Break       shift, and go to state 31
    T_Continue    shift, and go to state 32
    T_Identifier  shift, and go to state 33

    $default  reduce using rule 16 (BlockContent)

    BlockContent  转到状态 74
    VarDecls      转到状态 35
    VarDecl       转到状态 36
    Stmts         转到状态 37
    Stmt          转到状态 38
    AssignStmt    转到状态 39
    PrintStmt     转到状态 40
    CallStmt      转到状态 41
    CallExpr      转到状态 42
    ReturnStmt    转到状态 43
    IfStmt        转到状态 44
    If            转到状态 45
    WhileStmt     转到状态 46
    While         转到状态 47
    BreakStmt     转到状态 48
    ContinueStmt  转到状态 49


State 38

   23 Stmts: Stmt .

    $default  reduce using rule 23 (Stmts)


State 39

   24 Stmt: AssignStmt .

    $default  reduce using rule 24 (Stmt)


State 40

   25 Stmt: PrintStmt .

    $default  reduce using rule 25 (Stmt)


State 41

   26 Stmt: CallStmt .

    $default  reduce using rule 26 (Stmt)


State 42

   36 CallStmt: CallExpr . T_SEMI

    T_SEMI  shift, and go to state 75


State 43

   27 Stmt: ReturnStmt .

    $default  reduce using rule 27 (Stmt)


State 44

   28 Stmt: IfStmt .

    $default  reduce using rule 28 (Stmt)


State 45

   42 IfStmt: If . TestExpr StmtsBlock
   43       | If . TestExpr StmtsBlock Else StmtsBlock

    T_LP  shift, and go to state 76

    TestExpr  转到状态 77


State 46

   29 Stmt: WhileStmt .

    $default  reduce using rule 29 (Stmt)


State 47

   48 WhileStmt: While . TestExpr StmtsBlock

    T_LP  shift, and go to state 76

    TestExpr  转到状态 78


State 48

   30 Stmt: BreakStmt .

    $default  reduce using rule 30 (Stmt)


State 49

   31 Stmt: ContinueStmt .

    $default  reduce using rule 31 (Stmt)


State 50

   15 _Args: _Args T_COMMA T_Int T_Identifier .

    $default  reduce using rule 15 (_Args)


State 51

    6 FuncDecl: RetType FuncName T_LP Args error T_LC BlockContent . T_RC

    T_RC  shift, and go to state 79


State 52

    7 FuncDecl: RetType FuncName T_LP Args T_RP error BlockContent . T_RC

    T_RC  shift, and go to state 80


State 53

    4 FuncDecl: RetType FuncName T_LP Args T_RP T_LC BlockContent . T_RC
    8         | RetType FuncName T_LP Args T_RP T_LC BlockContent . error

    error  shift, and go to state 81
    T_RC   shift, and go to state 82


State 54

   21 VarDecl: T_Int T_Identifier .

    $default  reduce using rule 21 (VarDecl)


State 55

   71 ReadInt: T_ReadInt . T_LP T_StringConstant T_RP

    T_LP  shift, and go to state 83


State 56

   66 Expr: T_IntConstant .

    $default  reduce using rule 66 (Expr)


State 57

   37 CallExpr: T_Identifier . T_LP Actuals T_RP
   67 Expr: T_Identifier .

    T_LP  shift, and go to state 68

    $default  reduce using rule 67 (Expr)


State 58

   41 ReturnStmt: T_Return T_SEMI .

    $default  reduce using rule 41 (ReturnStmt)


State 59

   65 Expr: T_NOT . Expr

    T_ReadInt      shift, and go to state 55
    T_IntConstant  shift, and go to state 56
    T_Identifier   shift, and go to state 57
    T_NOT          shift, and go to state 59
    T_LP           shift, and go to state 60

    CallExpr  转到状态 61
    Expr      转到状态 84
    ReadInt   转到状态 63


State 60

   70 Expr: T_LP . Expr T_RP

    T_ReadInt      shift, and go to state 55
    T_IntConstant  shift, and go to state 56
    T_Identifier   shift, and go to state 57
    T_NOT          shift, and go to state 59
    T_LP           shift, and go to state 60

    CallExpr  转到状态 61
    Expr      转到状态 85
    ReadInt   转到状态 63


State 61

   69 Expr: CallExpr .

    $default  reduce using rule 69 (Expr)


State 62

   40 ReturnStmt: T_Return Expr . T_SEMI
   52 Expr: Expr . T_PLUS Expr
   53     | Expr . T_MINUS Expr
   54     | Expr . T_STAR Expr
   55     | Expr . T_DIV Expr
   56     | Expr . T_PER Expr
   57     | Expr . T_RB Expr
   58     | Expr . T_LB Expr
   59     | Expr . T_Ge Expr
   60     | Expr . T_Le Expr
   61     | Expr . T_Eq Expr
   62     | Expr . T_Ne Expr
   63     | Expr . T_Or Expr
   64     | Expr . T_And Expr

    T_Le     shift, and go to state 86
    T_Ge     shift, and go to state 87
    T_Eq     shift, and go to state 88
    T_Ne     shift, and go to state 89
    T_And    shift, and go to state 90
    T_Or     shift, and go to state 91
    T_MINUS  shift, and go to state 92
    T_DIV    shift, and go to state 93
    T_PLUS   shift, and go to state 94
    T_STAR   shift, and go to state 95
    T_PER    shift, and go to state 96
    T_SEMI   shift, and go to state 97
    T_LB     shift, and go to state 98
    T_RB     shift, and go to state 99


State 63

   68 Expr: ReadInt .

    $default  reduce using rule 68 (Expr)


State 64

   33 PrintStmt: T_Print T_LP . T_StringConstant PActuals T_RP T_SEMI

    T_StringConstant  shift, and go to state 100


State 65

   50 BreakStmt: T_Break T_SEMI .

    $default  reduce using rule 50 (BreakStmt)


State 66

   51 ContinueStmt: T_Continue T_SEMI .

    $default  reduce using rule 51 (ContinueStmt)


State 67

   32 AssignStmt: T_Identifier T_ASSIGNOP . Expr T_SEMI

    T_ReadInt      shift, and go to state 55
    T_IntConstant  shift, and go to state 56
    T_Identifier   shift, and go to state 57
    T_NOT          shift, and go to state 59
    T_LP           shift, and go to state 60

    CallExpr  转到状态 61
    Expr      转到状态 101
    ReadInt   转到状态 63


State 68

   37 CallExpr: T_Identifier T_LP . Actuals T_RP
